--- a/package.json
+++ b/package.json
@@ -9,9 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "12.2.2",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "@mui/icons-material": "^5.8.4",
+    "@mui/lab": "^5.0.0-alpha.60",
+    "@mui/material": "^5.2.4",
+    "@mui/styled-engine-sc": "^5.1.0",
+    "@mui/styles": "^5.8.0",
+    "@mui/x-data-grid": "^5.13.1",
+    "@mui/x-date-pickers": "^5.0.0-alpha.3",
+    "axios": "^0.27.2",
+    "date-fns": "^2.27.0",
+    "googleapis": "^105.0.0",
+    "i": "^0.3.7",
+    "next": "12.0.7",
+    "next-auth": "^4.10.1",
+    "node-sass": "^6.0.1",
+    "npm": "^8.14.0",
+    "react": "17.0.2",
+    "react-dom": "17.0.2"
   },
   "devDependencies": {
     "eslint": "8.20.0",
