--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "next": "12.0.7",
     "next-auth": "^4.10.1",
     "node-sass": "^6.0.1",
-    "npm": "^8.14.0",
+    "poppins-font": "^1.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
