--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     "@mui/x-date-pickers": "^5.0.0-alpha.3",
     "axios": "^0.27.2",
     "date-fns": "^2.27.0",
-    "next": "12.0.7",
-    "next-auth": "^4.10.1",
-    "node-sass": "^6.0.1",
+    "next": "12.2.5",
+    "next-auth": "^4.24.7",
+    "sass": "^1.78.0",
     "poppins-font": "^1.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
